# LangChain-RAG-LangServe

./: README.md
API/: client.py  main.py  token_bucket.py
API Deployment Docker+Poetry/: Dockerfile  README.md  pyproject.toml
API Deployment Docker+Poetry/app/: promptior.txt  server.py
Dummy Front/: package-lock.json  package.json
Dummy Front/public/: index.html
Dummy Front/src/: App.tsx  index.css
